--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,26 @@
-# Set the minimum required version of CMake
 cmake_minimum_required(VERSION 3.10)
-
-# Define the project name and specify it's a C and C++ project
 project(modbus_opcua_gateway C CXX)
 
-# Set the C and C++ standards
+# --- Compiler and Standard ---
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Use PkgConfig to find libraries, which is standard on Linux
+# --- Find Dependencies ---
+find_package(yaml-cpp REQUIRED)
 find_package(PkgConfig REQUIRED)
-
-# Find the required libraries using their .pc files
-# These will be available if the libraries are installed from source correctly
 pkg_check_modules(LIBMODBUS REQUIRED libmodbus)
 pkg_check_modules(OPEN62541 REQUIRED open62541)
 
-# Find yaml-cpp using its config file (modern CMake approach)
-find_package(yaml-cpp 0.6 REQUIRED)
-
-# Add the include directories for all dependencies
+# --- Include Directories ---
 include_directories(
     ${LIBMODBUS_INCLUDE_DIRS}
     ${OPEN62541_INCLUDE_DIRS}
     ${yaml-cpp_INCLUDE_DIRS}
 )
 
-# Add the source files for our executable
+# --- Add Executable ---
 add_executable(modbus_opcua_gateway
     main.c
     config_parser.cpp # The new C++ parser
@@ -37,16 +29,17 @@ add_executable(modbus_opcua_gateway
     logger.c
 )
 
-set_target_properties(modbus_opcua_gateway PROPERTIES
-    INSTALL_RPATH "/usr/local/lib"
-    BUILD_WITH_INSTALL_RPATH TRUE
-)
-
-# Link the executable against the required libraries
+# --- Link Libraries ---
 target_link_libraries(modbus_opcua_gateway
     PRIVATE
     ${LIBMODBUS_LIBRARIES}
     ${OPEN62541_LIBRARIES}
-    yaml-cpp::yaml-cpp # Link with yaml-cpp
+    yaml-cpp::yaml-cpp
+)
+
+# --- Set RPATH for runtime library search path ---
+set_target_properties(modbus_opcua_gateway PROPERTIES
+    INSTALL_RPATH "/usr/local/lib"
+    BUILD_WITH_INSTALL_RPATH TRUE
 )
 
